--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "web3.storage": "^4.5.5"
   },
   "devDependencies": {
     "@types/google.maps": "^3.54.1"
