--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "ethers": "^6.7.1",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "prisma": "^5.3.1",
@@ -27,6 +28,7 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "5.2.2",
+    "web3": "^4.1.2",
     "web3.storage": "^4.5.5"
   },
   "devDependencies": {
