--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "macWorker": "ts-node -r tsconfig-paths/register src/macWorker.ts"
+    "macWorker": "ts-node -r tsconfig-paths/register src/macWorker.ts",
+    "serverWorker": "ts-node -r tsconfig-paths/register src/serverWorker.ts"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2",
@@ -15,11 +16,14 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@xmtp/xmtp-js": "^11.0.0",
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "ethers": "^6.7.1",
+    "install": "^0.13.0",
     "next": "13.5.2",
+    "npm": "^10.1.0",
     "postcss": "8.4.30",
     "prisma": "^5.3.1",
     "react": "18.2.0",
